--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,11 +21,12 @@
         <!-- House Icon -->
         <ImageView
             android:id="@+id/logoImageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/logosmall"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/logo2_white"
             android:contentDescription="@string/app_name"
-            android:layout_marginEnd="12dp" />
+            android:layout_marginEnd="12dp"
+            android:alpha="0" />
 
         <!-- App Name -->
         <TextView
@@ -36,7 +37,8 @@
             android:textSize="24sp"
             android:textColor="#FFFFFF"
             android:fontFamily="sans-serif-black"
-            android:letterSpacing="0" />
+            android:letterSpacing="0"
+            android:alpha="0" />
 
     </LinearLayout>
 
