--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="colorPrimary">#FF6200EE</color>
+    <color name="white_alpha_70">#B3FFFFFF</color>
+    <color name="system_blue">#FF2B9D9D</color>
 </resources>
