--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -65,9 +65,12 @@
                 android:layout_height="56dp"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
+                android:insetLeft="8dp"
+                android:insetRight="8dp"
                 app:icon="@drawable/ic_filter"
                 app:iconGravity="textStart"
                 app:iconPadding="0dp"
+                app:iconSize="24dp"
                 app:strokeColor="@color/primary_blue"
                 app:iconTint="@color/primary_blue"
                 app:cornerRadius="12dp"
